--- a/overlay/frameworks/base/core/res/res/values/dimens.xml
+++ b/overlay/frameworks/base/core/res/res/values/dimens.xml
@@ -20,7 +20,7 @@
 <resources>
 
     <!-- Height of the status bar in portrait -->
-    <dimen name="status_bar_height_portrait">42dp</dimen>
+    <dimen name="status_bar_height_portrait">112px</dimen>
 
     <!-- Height of the status bar in landscape -->
     <dimen name="status_bar_height_landscape">24dp</dimen>
