--- a/overlay-dot/frameworks/base/core/res/res/values/dot_config.xml
+++ b/overlay-dot/frameworks/base/core/res/res/values/dot_config.xml
@@ -5,4 +5,7 @@
 <resources>
     <!-- Shows the required view for in-display fingerprint -->
     <bool name="config_supportsInDisplayFingerprint">true</bool>
+
+    <!-- Default fod pressed color -->
+    <integer name="config_fod_pressed_color">2</integer>
 </resources>
