grus: Remap and filter display color mode mappings
Make it more friendlier to read.

Signed-off-by: Albert I <kras@raphielgang.org>

--- a/overlay-dot/frameworks/base/core/res/res/values/dot_config.xml
+++ b/overlay-dot/frameworks/base/core/res/res/values/dot_config.xml
@@ -11,4 +11,18 @@
 
     <!-- Default fod pressed color -->
     <integer name="config_fod_pressed_color">2</integer>
+
+    <!-- Display mode remapping table.
+         If the mode names returned by the backend do not match
+         the predefined and translated strings in the Settings
+         app, they can be remapped here. The format is
+         "oldname:newname", one per entry. -->
+    <string-array name="config_displayModeMappings" translatable="false">
+        <item>03srgb_d65:sRGB</item>
+        <item>40smart_mc:DCI-P3</item>
+        <item>hal_hdr:HDR</item>
+    </string-array>
+
+    <!-- Should we filter any display modes which are unampped? -->
+    <bool name="config_filterDisplayModes">true</bool>
 </resources>
